# bias-passport-pro

./: .env.example  .gitignore  Dockerfile  EVALUATION_GUIDE.md  LICENSE  PITCH.md  README.md  Technical_Spec.docx  docker-compose.yml  index.html  main.py  package-lock.json  package.json  patched_results.json  pyproject.toml  tailwind.config.ts
configs/: comprehensive.yaml  default.yaml
dashboard/: index.html  package.json  tailwind.config.js
dashboard/src/: App.jsx
dashboard/src/components/: BiasPassport.jsx  BiasRadarChart.jsx  DemographicHeatmap.jsx  ExtremeOutputs.jsx  ImageExplorer.jsx  ModelComparison.jsx
data/prompts/: counterfactual.txt  harmful_content.txt  representation.txt  stereotype_association.txt  visual_qa.txt
experiments/: __init__.py  runner.py
fingerprint_squared/: __init__.py  cli.py  worker.py
fingerprint_squared/analysis/: __init__.py  two_person.py
fingerprint_squared/api/: __init__.py  server.py
fingerprint_squared/benchmarks/: __init__.py  datasets.py  loader.py
fingerprint_squared/cli/: __init__.py  main.py
fingerprint_squared/core/: __init__.py  bias_fingerprint.py  evaluator.py  fingerprint.py  fingerprint_pipeline.py  pipeline.py
fingerprint_squared/data/: __init__.py  fhibe_loader.py  roboflow_loader.py
fingerprint_squared/metrics/: __init__.py  bias_scores.py  fairness.py  intersectional.py  statistical.py
fingerprint_squared/models/: __init__.py  anthropic_vlm.py  base.py  google_vlm.py  huggingface_vlm.py  internvl_vlm.py  llama_vision_vlm.py  openai_vlm.py  openrouter_vlm.py  qwen_vlm.py  registry.py
fingerprint_squared/preprocessing/: __init__.py  image_processor.py
fingerprint_squared/probes/: __init__.py  bias_probes.py  counterfactual.py  representation.py  social_inference_battery.py  stereotype.py
fingerprint_squared/reporting/: __init__.py  pdf_generator.py
fingerprint_squared/scoring/: __init__.py  llm_judge.py
fingerprint_squared/storage/: __init__.py  sqlite_storage.py
fingerprint_squared/utils/: __init__.py  config.py  io.py  logging.py
fingerprint_squared/visualization/: __init__.py  plots.py  reports.py
notebooks/: quickstart.ipynb
paper/: fingerprint2_neurips.tex  fingerprint2_neurips_enhanced.tex  generate_figures.py  neurips_2025.sty
results/: fhibe_paligemma.html
scripts/: compare_models.py  download_fhibe.sh  download_fhibe_on_rolf.sh  generate_benchmark.py  patch_demographics.py  rolf_setup_and_run.sh  run_benchmark.py  run_evaluation.py  run_fhibe_benchmark.py  run_fingerprint.py  run_full_benchmark.sh  run_full_evaluation.py  run_on_rolf.sh  run_roboflow_benchmark.py  setup_fhibe.py  setup_rolf.sh
src/: App.tsx  index.css
src/components/: AppLayout.tsx  RouteErrorBoundary.tsx
src/components/euaiact/: ArticleCompliance.tsx  ComplianceRadarChart.tsx  DemographicBreakdown.tsx  ModelComplianceReport.tsx
src/data/: benchmarkData.ts
src/pages/: AirportPage.tsx  BankingPage.tsx  BiasReportPage.tsx  EIDPage.tsx  EUAIActPage.tsx  LabPage.tsx  LandingPage.tsx  MitigationPage.tsx  ScanPage.tsx
src/services/: biasScan.ts  huggingface.ts
supabase/: config.toml
supabase/functions/bias-scan/: index.ts
tests/: __init__.py  test_metrics.py  test_probes.py
